--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="highlight_yellow_trans">#33FFEB6B</color>
     <color name="navy_blue_translucent_30">#30FFFFFF</color>
     <color name="navy_blue_alt">#262a3e</color>
+    <color name="navy_blue_alt_2">#FF3F51B5</color>
     <color name="pink">#bd5dfb</color>
     <color name="peach">#ff9195</color>
     <color name="yellow">#fbc33d</color>
