--- a/app/src/main/res/layout/fragment_audios_list.xml
+++ b/app/src/main/res/layout/fragment_audios_list.xml
@@ -47,126 +47,224 @@
             android:layout_height="match_parent"
             />
     </RelativeLayout>
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/layoutBottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxHeight="@dimen/audio_player_sheet_height"
-        android:background="@drawable/background_curved"
+        android:background="@drawable/background_curved_audio_sheet"
         android:clipToPadding="false"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
         android:padding="@dimen/eight_dp"
         app:behavior_hideable="false"
-        app:behavior_peekHeight="100dp"
+        app:behavior_peekHeight="@dimen/audio_player_peek_height"
         app:layout_behavior="@string/bottom_sheet_behavior"
         android:visibility="gone"
         >
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="@dimen/eighteen_sp"
-            android:textColor="@color/white"
-            android:layout_marginTop="@dimen/material_generic"
-            />
-        <TextView
-            android:id="@+id/album"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/six_dp"
-            android:textSize="@dimen/eight_sp"
-            android:textColor="@color/grey_color"
-            />
-        <TextView
-            android:id="@+id/artist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/six_dp"
-            android:textSize="@dimen/twelve_sp"
-            android:textColor="@color/white"
-            />
-
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/bottomSheetSmall"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/sixty_four_dp"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal|center_vertical"
-            android:layout_marginTop="@dimen/material_generic"
-            >
-            <TextView
-                android:id="@+id/time_elapsed"
-                android:layout_width="@dimen/zero_dp"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/eight_sp"
-                android:textColor="@color/grey_color"
-                android:layout_weight="0.1"
-                android:gravity="center_horizontal|center_vertical"
-                />
-            <SeekBar
-                android:id="@+id/seekBar"
-                android:layout_width="@dimen/zero_dp"
-                android:layout_height="wrap_content"
-                android:visibility="visible"
-                android:progressDrawable="@drawable/seekbar_accent"
-                android:thumb="@color/white"
-                android:layout_weight="0.8"
-                />
-            <com.masoudss.lib.WaveformSeekBar
-                android:id="@+id/waveformSeekbar"
-                android:layout_width="@dimen/zero_dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.8"
-                android:visibility="gone"
-                app:wave_width="@dimen/two_dp"
-                app:wave_gap="1dp"
-                app:wave_min_height="@dimen/six_dp"
-                app:wave_corner_radius="@dimen/two_dp"
-                app:wave_background_color="@color/grey_color"
-                app:wave_progress_color="@color/highlight_yellow"
-                app:wave_gravity="center"
-                />
-            <TextView
-                android:id="@+id/track_length"
-                android:layout_width="@dimen/zero_dp"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/eight_sp"
-                android:textColor="@color/grey_color"
-                android:layout_weight="0.1"
-                android:gravity="center_horizontal|center_vertical"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/material_generic"
-            android:layout_marginBottom="@dimen/material_generic"
+            android:layout_height="@dimen/audio_player_peek_height"
+            android:gravity="center_vertical"
             >
             <ImageView
-                android:id="@+id/prevButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="center_horizontal"
+                app:srcCompat="@drawable/ic_round_keyboard_arrow_up_24"
+                />
+            <ImageView
+                android:id="@+id/album_image_small"
                 android:layout_width="@dimen/minimal_icon_size"
-                android:layout_height="@dimen/minimal_icon_size"
-                app:srcCompat="@drawable/ic_round_skip_previous_32"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_outline_audio_file_32"
+                android:layout_gravity="center_vertical"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center_vertical"
+                android:layout_marginStart="@dimen/material_generic"
+                android:layout_toRightOf="@id/album_image_small"
+                android:layout_toEndOf="@id/album_image_small"
+                >
+                <TextView
+                    android:id="@+id/title_small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/sixteen_sp"
+                    android:textColor="@color/white"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:ellipsize="middle"
+                    />
+                <TextView
+                    android:id="@+id/summary_small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/six_dp"
+                    android:textSize="@dimen/eight_sp"
+                    android:textColor="@color/white"
+                    />
+            </LinearLayout>
+            <TextView
+                android:id="@+id/time_summary_small"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@color/white"
+                android:textSize="@dimen/eight_sp"
                 android:layout_marginRight="@dimen/material_generic"
                 android:layout_marginEnd="@dimen/material_generic"
+                android:gravity="center_vertical"
+                android:layout_toLeftOf="@id/play_button_small"
+                android:layout_toStartOf="@id/play_button_small"
                 />
             <ImageView
-                android:id="@+id/playButton"
+                android:id="@+id/play_button_small"
                 app:srcCompat="@drawable/ic_round_pause_circle_32"
                 android:layout_width="@dimen/minimal_icon_size"
-                android:layout_height="@dimen/minimal_icon_size"
+                android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/material_generic"
                 android:layout_marginEnd="@dimen/material_generic"
+                android:layout_gravity="center_vertical"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/bottomSheetBig"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:alpha="0"
+            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_round_keyboard_arrow_down_24"
                 />
             <ImageView
-                android:id="@+id/nextButton"
+                android:id="@+id/album_image"
                 android:layout_width="@dimen/minimal_icon_size"
                 android:layout_height="@dimen/minimal_icon_size"
-                app:srcCompat="@drawable/ic_round_skip_next_32"
+                app:srcCompat="@drawable/ic_outline_audio_file_32"
+                android:layout_marginTop="@dimen/material_generic"
                 />
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="@dimen/eighteen_sp"
+                android:textColor="@color/white"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:ellipsize="middle"
+                android:layout_marginTop="@dimen/six_dp"
+                />
+            <TextView
+                android:id="@+id/album"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/six_dp"
+                android:textSize="@dimen/eight_sp"
+                android:textColor="@color/grey_color"
+                />
+            <TextView
+                android:id="@+id/artist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/six_dp"
+                android:textSize="@dimen/twelve_sp"
+                android:textColor="@color/white"
+                />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/sixty_four_dp"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal|center_vertical"
+                android:layout_marginTop="@dimen/material_generic"
+                >
+                <TextView
+                    android:id="@+id/time_elapsed"
+                    android:layout_width="@dimen/zero_dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/eight_sp"
+                    android:textColor="@color/grey_color"
+                    android:layout_weight="0.1"
+                    android:gravity="center_horizontal|center_vertical"
+                    />
+                <SeekBar
+                    android:id="@+id/seekBar"
+                    android:layout_width="@dimen/zero_dp"
+                    android:layout_height="wrap_content"
+                    android:visibility="visible"
+                    android:progressDrawable="@drawable/seekbar_accent"
+                    android:thumb="@color/white"
+                    android:layout_weight="0.8"
+                    />
+                <com.masoudss.lib.WaveformSeekBar
+                    android:id="@+id/waveformSeekbar"
+                    android:layout_width="@dimen/zero_dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.8"
+                    android:visibility="gone"
+                    app:wave_width="@dimen/two_dp"
+                    app:wave_gap="1dp"
+                    app:wave_min_height="@dimen/six_dp"
+                    app:wave_corner_radius="@dimen/two_dp"
+                    app:wave_background_color="@color/grey_color"
+                    app:wave_progress_color="@color/highlight_yellow"
+                    app:wave_gravity="center"
+                    />
+                <TextView
+                    android:id="@+id/track_length"
+                    android:layout_width="@dimen/zero_dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/eight_sp"
+                    android:textColor="@color/grey_color"
+                    android:layout_weight="0.1"
+                    android:gravity="center_horizontal|center_vertical"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/material_generic"
+                android:layout_marginBottom="@dimen/material_generic"
+                >
+                <ImageView
+                    android:id="@+id/prevButton"
+                    android:layout_width="@dimen/minimal_icon_size"
+                    android:layout_height="@dimen/minimal_icon_size"
+                    app:srcCompat="@drawable/ic_round_skip_previous_32"
+                    android:layout_marginRight="@dimen/material_generic"
+                    android:layout_marginEnd="@dimen/material_generic"
+                    />
+                <ImageView
+                    android:id="@+id/playButton"
+                    app:srcCompat="@drawable/ic_round_pause_circle_32"
+                    android:layout_width="@dimen/minimal_icon_size"
+                    android:layout_height="@dimen/minimal_icon_size"
+                    android:layout_marginRight="@dimen/material_generic"
+                    android:layout_marginEnd="@dimen/material_generic"
+                    />
+                <ImageView
+                    android:id="@+id/nextButton"
+                    android:layout_width="@dimen/minimal_icon_size"
+                    android:layout_height="@dimen/minimal_icon_size"
+                    app:srcCompat="@drawable/ic_round_skip_next_32"
+                    />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
