--- a/app/src/main/res/layout/list_header.xml
+++ b/app/src/main/res/layout/list_header.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/list_header_height"
     android:layout_width="match_parent"
     android:padding="@dimen/material_generic"
-    android:background="@color/navy_blue_alt"
+    android:background="@color/navy_blue"
     >
     <TextView
         android:id="@+id/header_title"
@@ -13,8 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
-        android:textSize="@dimen/list_header_textsize"
-        android:textColor="@color/white"
+        android:textSize="@dimen/eighteen_sp"
+        android:textStyle="bold"
+        android:textColor="@color/highlight_yellow"
         >
     </TextView>
 
