Add telegram workflow; minor fixes

--- a/app/src/main/res/layout/image_metadata_sheet.xml
+++ b/app/src/main/res/layout/image_metadata_sheet.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/navy_blue_alt"
+    android:padding="@dimen/eight_dp">
+    <TextView
+        android:id="@+id/info_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textSize="@dimen/eighteen_sp"
+        android:textStyle="bold"
+        android:text="@string/information"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/info_text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="@dimen/material_generic_medium"
+        >
         <TextView
             android:id="@+id/metadata"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             />
     </androidx.core.widget.NestedScrollView>
 
