--- a/app/src/main/res/layout/fragment_audios_list.xml
+++ b/app/src/main/res/layout/fragment_audios_list.xml
@@ -54,7 +54,9 @@
         android:maxHeight="@dimen/audio_player_sheet_height"
         android:background="@drawable/background_curved_audio_sheet"
         android:clipToPadding="false"
-        android:padding="@dimen/eight_dp"
+        android:paddingLeft="@dimen/eight_dp"
+        android:paddingRight="@dimen/eight_dp"
+        android:paddingBottom="@dimen/eight_dp"
         app:behavior_hideable="false"
         app:behavior_peekHeight="@dimen/audio_player_peek_height"
         app:layout_behavior="@string/bottom_sheet_behavior"
@@ -67,8 +69,9 @@
             android:gravity="center_vertical"
             >
             <ImageView
+                android:id="@+id/sheet_up_arrow"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/material_generic_medium"
                 android:layout_alignParentTop="true"
                 android:layout_gravity="center_horizontal"
                 app:srcCompat="@drawable/ic_round_keyboard_arrow_up_24"
@@ -146,8 +149,9 @@
             android:alpha="0"
             >
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/sheet_down_arrow"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/material_generic_medium"
                 app:srcCompat="@drawable/ic_round_keyboard_arrow_down_24"
                 />
             <ImageView
