Few bugfixes in audio player

--- a/app/src/main/res/layout/audio_player_dialog_activity.xml
+++ b/app/src/main/res/layout/audio_player_dialog_activity.xml
@@ -21,7 +21,7 @@
         />
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/audio_player_sheet_height"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="@dimen/eighteen_sp"
