--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,20 +8,24 @@
     <color name="blue">#FF4287f5</color>
     <color name="black">#FF000000</color>
     <color name="black_70">#70000000</color>
+    <color name="black_50">#50000000</color>
     <color name="white">#FFFFFFFF</color>
 <!--    <color name="white_translucent">#10FFFFFF</color>-->
     <color name="white_translucent_2">#30FFFFFF</color>
     <color name="white_grey_1">#464a5b</color>
     <color name="navy_blue">#1a1e34</color>
-    <color name="highlight_yellow">#FFEB6B</color>
+    <color name="highlight_yellow">#fbc33d</color>
     <color name="highlight_yellow_trans">#33FFEB6B</color>
     <color name="navy_blue_translucent_30">#30FFFFFF</color>
     <color name="navy_blue_alt">#262a3e</color>
     <color name="navy_blue_alt_2">#FF3F51B5</color>
     <color name="pink">#bd5dfb</color>
+    <color name="purple">#57489b</color>
     <color name="peach">#ff9195</color>
     <color name="yellow">#fbc33d</color>
     <color name="green">#85df66</color>
+    <color name="green_banner">#4CAF50</color>
+    <color name="green_banner_item_selected">#1B5E20</color>
     <color name="orange">#FF7F50</color>
     <color name="red">#FF5733</color>
     <color name="accent_blue">#2196F3</color>
