--- a/app/src/main/res/drawable/background_curved_bottom_pink.xml
+++ b/app/src/main/res/drawable/background_curved_bottom_pink.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:bottomLeftRadius="@dimen/material_generic_large"
-        android:bottomRightRadius="@dimen/material_generic_large"
+        android:topLeftRadius="@dimen/material_generic_medium"
+        android:topRightRadius="@dimen/material_generic_medium"
+        android:bottomLeftRadius="@dimen/material_generic_medium"
+        android:bottomRightRadius="@dimen/material_generic_medium"
         />
-    <solid android:color="@color/pink" />
+    <solid android:color="@color/purple" />
 </shape>
