--- a/app/src/main/res/layout/list_banner_layout.xml
+++ b/app/src/main/res/layout/list_banner_layout.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.amaze.fileutilities.home_page.ui.MediaTypeHeaderView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/listBannerView"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/files_tab_heights"
-    android:padding="@dimen/material_generic_medium"
-    />
+    android:layout_height="@dimen/list_banners_height"
+    android:padding="@dimen/material_generic"
+    >
+    <com.amaze.fileutilities.home_page.ui.MediaTypeHeaderView
+        android:id="@+id/listBannerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+</LinearLayout>
