--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="material_sheet_peek_height">400dp</dimen>
     <dimen name="audio_player_sheet_height">500dp</dimen>
     <dimen name="files_tab_heights">180dp</dimen>
+    <dimen name="list_banners_height">400dp</dimen>
     <dimen name="twelve_dp">12dp</dimen>
     <dimen name="six_dp">6dp</dimen>
     <dimen name="fourty_eight_dp">48dp</dimen>
