--- a/app/src/main/res/drawable/background_curved_bottom_peach.xml
+++ b/app/src/main/res/drawable/background_curved_bottom_peach.xml
@@ -7,5 +7,5 @@
         android:bottomLeftRadius="@dimen/material_generic_medium"
         android:bottomRightRadius="@dimen/material_generic_medium"
         />
-    <solid android:color="@color/peach" />
+    <solid android:color="@color/peach_70" />
 </shape>
