--- a/app/src/main/res/drawable/background_curved_bottom_orange.xml
+++ b/app/src/main/res/drawable/background_curved_bottom_orange.xml
@@ -7,5 +7,6 @@
         android:bottomLeftRadius="@dimen/material_generic_medium"
         android:bottomRightRadius="@dimen/material_generic_medium"
         />
+    <stroke android:width="@dimen/four_dp" android:color="@color/orange" />
     <solid android:color="@color/orange_70" />
 </shape>
