--- a/app/src/main/res/layout/pdf_viewer_activity.xml
+++ b/app/src/main/res/layout/pdf_viewer_activity.xml
@@ -1,10 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <include
+        android:id="@+id/custom_toolbar"
+        layout="@layout/custom_toolbar"
+        />
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <LinearLayout
+        android:id="@+id/hints_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/material_generic_large"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:background="@drawable/button_curved_unselected"
+        >
+        <TextView
+            android:id="@+id/page_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+        <ImageView
+            android:id="@+id/switch_view"
+            app:srcCompat="@drawable/ic_outline_dark_mode_32"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            />
+    </LinearLayout>
+    <Button
+        android:id="@+id/pages_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        />
 </RelativeLayout>
