--- a/app/src/main/res/drawable/background_curved_dark_2.xml
+++ b/app/src/main/res/drawable/background_curved_dark_2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white_translucent_2"/>
-    <stroke android:width="2dp" android:color="@color/white" />
-    <corners android:radius="@dimen/material_generic"/>
+    <solid android:color="@color/black_70"/>
+    <stroke android:width="0dp" android:color="@color/white" />
+    <corners android:radius="@dimen/material_generic_large"/>
 <!--    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />-->
 </shape>
